[project]
name = "aoc24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daryl Stark", email = "daryl@dstark.nl" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aoc24 = "aoc24:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
